<resources>
    <string name="app_name">Empli\'tude</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Etudiant">Etudiant</string>
    <string name="Enseignant">Enseignant</string>
    <string name="action_settings">Paramètres</string>
    <string name="groupe">null</string>
    <string name="nom_appli">Empli\'tude</string>
    <string name="description">Bienvenue sur la première application de gestion d\'emploi du temps national, cette application va vous permettre de gagner du temps et de ne plus rien oublier. Renseigner vite vos informations pour la tester !</string>
    <string-array name="maj">
        <item>Tous les jours</item>
        <item>Tous les 3 jours</item>
        <item>Toutes les semaines</item>
        <item>Toutes les deux semaines</item>
        <item>Tous les mois</item>
    </string-array>
    <string-array name="notif">
        <item>1 jour avant</item>
        <item>2 jours avant</item>
        <item>1 heure avant</item>
        <item>4 heures avant</item>
    </string-array>

    <string-array name="heures">
        <item>08h00</item>
        <item>09h00</item>
        <item>10h00</item>
        <item>11h00</item>
        <item>12h00</item>
        <item>13h00</item>
        <item>14h00</item>
        <item>15h00</item>
        <item>16h00</item>
        <item>17h00</item>
        <item>18h00</item>
        <item>19h00</item>
    </string-array>


    <string name="emploiTache">Tâche</string>


    <!-- EXemple de name : tvrMinutes [-> tv = textView -> r = reveil -> Minute = ce qu'il fait]-->
    <!--TextView -->
    <string name="tvrMinutes">Minutes</string>
    <string name="tvrTempsPreparation">Temps de préparation</string>
    <string name="tvrRepeter">Répéter</string>
    <string name="tvrRepeterDroite">0 fois 5 min</string><!--C'est un bouton... -->
    <string name="tvrTempo">Reporter</string>
    <string name="tvrTempoDroite">5 min</string><!--C'est un bouton... -->
    <string name="tvrSon">Son</string>
    <string name="tvrSonDroite">Défaut</string><!--C'est un bouton... -->
    <string name="tvrFois">fois</string>
    <string name="tvrMin">min</string>
    <!-- Switch -->
    <string name="srTorche">Lampe torche</string>
    <string name="srFondu">Démarrage fondu</string>
    <string name="srVibreur">Vibreur</string>
    <!--Bouton -->
    <string name="brValid">OK</string>
    <string name="brAnnul">Annuler</string>

    <!-- *************************************** SON *************************************************-->

    <string name="active">Activé</string>
    <string name="deactive">Désactivé</string>

    =======
    <string name="service_name">Je sais pas</string>
    <string name="valider">Valider</string>
    <string name="task">Tâche</string>
    <string name="matiere">Matière :</string>
    <string name="date">Date :</string>
    <string name="description_tache">Description de la tâche</string>
    <string name="aucune_tache">Aucune tâche.</string>
    <string name="sonnerie">Sonnerie :</string>
    <string name="media">Média :</string>
    <string name="notification">Notification :</string>
    <string name="vibreur">Vibreur</string>
    <string name="logo">logo</string>
    <string name="student">Etudiant</string>
    <string name="enseignant">Enseignant</string>
    <string name="exp_num_groupe">Numéro</string>
    <string name="suivant">Suivant</string>
    <string name="annuler">Annuler</string>
    <string name="precedent">precedent</string>
    <string name="aucune_date">Aucune date</string>
    <string name="suivant_image">suivant</string>
    <string name="nom">Nom</string>
    <string name="date_tache">Date</string>
    <string name="matiere_tache">Matiere</string>
    <string name="information">Informations :</string>
    <string name="rien">Rien</string>
    <string name="heure_debut">Heure début :</string>
    <string name="taches">Tâches :</string>
    <string name="enseignant_emploi">Enseignant :</string>
    <string name="salle">Salle :</string>
    <string name="heure_fin">Heure fin :</string>
    <string name="bienvenue">Bienvenue sur Empli\'tude</string>
    <string name="emploi_du_temps">Emploi du temps</string>
    <string name="frequence">Fréquence de mise à jour :</string>
    <string name="supprimer_profil">Supprimer profil</string>
    <string name="couleur">Supprimer les couleurs des cours</string>
    <string name="notification_tache">Notification de tâche</string>
    <string name="delai_notification">Délai de notification de tâche :</string>
    <string name="description_appli">Application développée par Etienne Martinet, Arnaud Regnier, Florian Gosselin, Anthony Piaud, des étudiants en informatique.</string>
    <string name="notConnected">Vous devez être connecté à internet !</string>
    <string name="previous">Précedent</string>
    <string name="selection_school_title">Sélectionner votre établissement</string>
    <string name="selection_city_title">Sélectionner votre ville</string>
    <string name="selectionCityNull">Il n\'existe aucune ville dans la base de données.</string>
    <string name="selection_group_title">Sélectionner votre groupe</string>
    <string name="selectionGroupNull">Aucun groupe n\'a été associé a cette ville.</string>
    <string name="selectionSchoolNull">Aucun établissement n\'a été associé a cette ville.</string>
    <string name="next">Suivant</string>
    <string name="finish">Terminer</string>
    <string name="title_activity_settings">Préference</string>
    <string name="erreur">Erreur</string>


</resources>
