<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvrTempsPreparation"
        android:textSize="@dimen/tvrItems"
        android:id="@+id/tvrTempsPreparation"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/mrBordureH"
        android:layout_marginRight="@dimen/mrBordureH"
        android:layout_marginBottom="@dimen/mrBordureV"
        android:layout_marginTop="@dimen/mrBordureV"
        android:textColor="#000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mrBordureH"
        android:layout_marginRight="@dimen/mrBordureH"
        android:layout_marginBottom="@dimen/mrBordureV"
        android:layout_marginTop="@dimen/mrBordureV">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvrMinutes"
            android:id="@+id/tvrMinutes"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/nprTempsPreparation"
            android:layout_marginTop="38dp"
            android:layout_marginLeft="@dimen/mrBordureH"
            android:textSize="@dimen/tvrItems"
            android:textColor="#000" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:id="@+id/nprTempsPreparation"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mrBordureH"
        android:layout_marginRight="@dimen/mrBordureH"
        android:layout_marginBottom="@dimen/mrBordureV"
        android:layout_marginTop="@dimen/mrBordureV">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvrRepeter"
            android:id="@+id/tvrRepeter"
            android:textSize="@dimen/tvrItems"
            android:textColor="#000" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tvrRepeterDroite"
            android:id="@+id/brRepeterDroite"
            android:textSize="@dimen/tvrItems"
            android:textColor="#000"
            android:gravity="right"
            android:background="@android:color/transparent"

            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mrBordureH"
        android:layout_marginRight="@dimen/mrBordureH"
        android:layout_marginBottom="@dimen/mrBordureV"
        android:layout_marginTop="@dimen/mrBordureV">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tvrTempo"
            android:id="@+id/tvrTempo"
            android:textSize="@dimen/tvrItems"
            android:textColor="#000"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tvrTempoDroite"
            android:id="@+id/brTempoDroite"
            android:textSize="@dimen/tvrItems"
            android:textColor="#000"
            android:gravity="right"
            android:background="@android:color/transparent"


            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mrBordureH"
        android:layout_marginRight="@dimen/mrBordureH"
        android:layout_marginBottom="@dimen/mrBordureV"
        android:layout_marginTop="@dimen/mrBordureV"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvrSon"
            android:id="@+id/tvrSon"
            android:textSize="@dimen/tvrItems"
            android:textColor="#000" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tvrSonDroite"
            android:id="@+id/brSonDroite"
            android:textSize="@dimen/tvrItems"
            android:textColor="#000"
            android:gravity="right"
            android:background="@android:color/transparent"

            />
    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/srTorche"
        android:textSize="@dimen/tvrItems"
        android:id="@+id/srTorche"
        android:layout_marginLeft="@dimen/mrBordureH"
        android:layout_marginRight="@dimen/mrBordureH"
        android:layout_marginBottom="@dimen/mrBordureV"
        android:layout_marginTop="@dimen/mrBordureV" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/srFondu"
        android:textSize="@dimen/tvrItems"
        android:id="@+id/srFondu"
        android:layout_marginLeft="@dimen/mrBordureH"
        android:layout_marginRight="@dimen/mrBordureH"
        android:layout_marginBottom="@dimen/mrBordureV"
        android:layout_marginTop="@dimen/mrBordureV"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/srVibreur"
        android:textSize="@dimen/tvrItems"
        android:id="@+id/srVibreur"
        android:layout_marginLeft="@dimen/mrBordureH"
        android:layout_marginRight="@dimen/mrBordureH"
        android:layout_marginBottom="@dimen/mrBordureV"
        android:layout_marginTop="@dimen/mrBordureV"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Programmer"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/msg1"
        android:layout_below="@+id/button1"/>


</LinearLayout>