<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e8e8e8">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:elevation="2dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/emploi_du_temps"
                    android:id="@+id/emploi"
                    android:layout_weight="0.04"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.04">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/frequence"
                        android:id="@+id/textView4"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical" />

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="43dp"
                        android:id="@+id/maj"
                        android:spinnerMode="dialog"
                        android:background="#13000000" />
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/supprimer_profil"
                    android:id="@+id/supprimer"
                    android:onClick="supprimerProfil" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/couleur"
                    android:id="@+id/couleur"
                    android:layout_gravity="center_horizontal"
                    android:onClick="supprimerCouleur" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="2dp"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/notification_tache"
                    android:id="@+id/textView7"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/delai_notification"
                        android:id="@+id/textView12"
                        android:gravity="center_vertical"
                        android:layout_weight="0.04"
                        android:layout_gravity="center_vertical" />

                    <Spinner
                        android:layout_width="129dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/notif"
                        android:spinnerMode="dialog"
                        android:background="#13000000" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>