<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:weightSum="1">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/information"
                    android:id="@+id/textView27"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.04"
                    android:gravity="fill_vertical"
                    android:textSize="18sp"
                    android:paddingBottom="10dp"
                    android:autoText="false"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.04"
                    android:id="@+id/llLessons">

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/taches"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.04"
                    android:gravity="fill_vertical"
                    android:textSize="18sp"
                    android:paddingBottom="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="15dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/aucune_tache"
                android:id="@+id/aucune"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.0"
                android:gravity="center_vertical|center_horizontal"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/taches"
                android:paddingBottom="30dp" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        app:srcCompat="@drawable/ic_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp" />

</RelativeLayout>