<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#384248">

            <Switch
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Activé"
                android:id="@+id/activer"
                android:checked="true"
                android:background="?attr/selectableItemBackground"
                android:textColor="@color/white"
                android:textSize="@dimen/tvrItems"
                android:textStyle="bold"
                android:paddingLeft="50dp"
                android:paddingTop="15dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp" />
        </LinearLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:id="@+id/touch">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Profil cours"
                    android:id="@+id/textView15"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:text="@string/sonnerie"
                            android:id="@+id/tvSonnerie"
                            android:gravity="center_vertical" />

                        <SeekBar
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/sonnerie"
                            android:indeterminate="false"
                            android:progress="0"
                            android:layout_gravity="center_vertical" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:text="@string/media"
                            android:id="@+id/textView21"
                            android:gravity="center_vertical" />

                        <SeekBar
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/media"
                            android:indeterminate="false"
                            android:progress="0"
                            android:layout_gravity="center_vertical" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:text="@string/notification"
                            android:id="@+id/textView19"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical" />

                        <SeekBar
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/notification"
                            android:indeterminate="false"
                            android:progress="0"
                            android:layout_gravity="center" />
                    </LinearLayout>
                </LinearLayout>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/vibreur"
                    android:id="@+id/vibreur"
                    android:checked="false" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/color"
                android:background="#4f000000"
                android:visibility="gone"></FrameLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>